# Optimizing-Context-Enhanced-Relational-Joins

./: CMakeLists.txt  README.md
include/join2vec/: join2vec.h  myVector.h  scan.h
include/util/: Tests.cpp  Tests.h  ThreadPool.h  TimeBlock.cpp  TimeBlock.h
perf/: bench.cpp
src/: CMakeLists.txt  main.cpp
src/join2vec/: join2vec.cpp  scan.cpp
